day03/mysql.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: mysql 
  namespace: day03 
spec:
  replicas: 1
  selector: 
    matchLabels:
      name: mysql
  template:
    metadata:
      labels:
        name: mysql
    spec: 
      volumes:
      - name: data-vol 
        persistentVolumeClaim: 
          claimName: data-pvc
      containers:
      - name: mysql-container 
        image: mysql:8 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data-vol 
          mountPath: /var/lib/mysql
