day03/dov-bear.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: dov-bear 
  namespace: day03
  labels:
    name: dov-bear
spec:
  replicas: 3
  selector:
    matchLabels:
      name: dov-bear-po
  template:
    metadata: 
      labels:
        name: dov-bear-po
    spec:
      # define volumes
      volumes: 
      - name: configs-vol
        configMap: 
          name: dov-bear-cm
      - name: secrets-vol
        secret:
          secretName: dov-bear-secret
      containers:
      - name: dov-bear-container
        image: chukmunnlee/dov-bear:v1 
        imagePullPolicy: IfNotPresent
        ports:
        - name: web 
          containerPort: 5000
        # mount the volume into the container
        volumeMounts:
        - name: configs-vol
          mountPath: /configs
          readOnly: true
        - name: secrets-vol
          mountPath: /secrets
          readOnly: true

---
apiVersion: v1
kind: Service
metadata:
  name: dov-bear
  namespace: day03
spec:
  # type of service - ClusterIP, NodePort, LoadBalancer
  type: NodePort
  selector:
    name: dov-bear-po
  ports:
  - port: 8080
    targetPort: web
    # caution!
    nodePort: 32000
