day03/fortune.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: fortune-deploy 
  namespace: day03
  labels:
    app: fortune 
    env: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      name: fortune 
      env: prod
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxSurge: 20%
      maxUnavailable: 0%
  template:
    metadata:
      name: my-fortune
      labels: 
        name: fortune 
        env: prod
    spec:
      containers:
      - name: fortune-container
        image: chukmunnlee/myfortune:v1.2
        #image: chukmunnlee/countingbook:v1.1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000

---
apiVersion: v1 
kind: Service 
metadata: 
  name: fortune-svc 
  namespace: day03
spec:
  # options: ClusterIP, NodePort
  type: ClusterIP
  selector: 
    name: fortune 
    env: prod
  ports:
  - port: 80 # service port
    targetPort: 3000 # containerPort
