day03/gateway.yaml
---
apiVersion: v1 
kind: Namespace
metadata:
  name: cfdsa

---
apiVersion: gateway.networking.k8s.io/v1 
kind: Gateway
metadata: 
  name: cfdsa-gtw 
  namespace: cfdsa
spec:
  gatewayClassName: cilium
  listeners:
  - name: web
    port: 80
    protocol: HTTP
    hostname: "*.nip.io"
    allowedRoutes:
      namespaces:
        from: All
